fixed float rounding error in my orders and ensured that the images in the catalogue and view part arent being cropped

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -77,14 +77,14 @@ a {
 
 .card-img-top {
     width: 100%;
-    height: 200px; /* Set the desired height */
-    object-fit: cover; 
+    height: 200px; 
+    object-fit: fill; 
 }
 
 .view-part-img {
     width: 100%;
-    height: 200px; 
-    object-fit: cover; 
+    height: 100%; 
+    object-fit:fill; 
 }
 
 .custom-link {
